# lora-dataset-curator

./: .gitignore  LICENSE  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: BUILD_DISTRIBUTION.md  PROJECT_PLAN.md  REFERENCE_LIBRARIES_AND_TECH.md  REFERENCE_PROJECT_STRUCTURES.md  USER_GUIDE.md
scripts/: build_windows.ps1  entrypoint.py  package_release.ps1
src/lora_dataset_curator/: __init__.py  actions.py  app.py  cache.py  duplicate_analysis.py  error_log.py  external_embedding.py  grouping.py  hashing.py  metadata.py  models.py  scanner.py  similarity.py  storage.py  trash.py
src/lora_dataset_curator/ui/: __init__.py  main_window.py
tests/: conftest.py  test_actions.py  test_app.py  test_duplicate_analysis.py  test_error_log.py  test_external_embedding.py  test_grouping.py  test_gui.py  test_scanner.py  test_storage.py
